--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <title>A Drop Of Art</title>
 </head>
 <body>
-    
+    <div id="title">A Drop Of Art</div>
+    <div id="blur"></div>
 </body>
 </html>
