--- a/main.html
+++ b/main.html
@@ -8,5 +8,11 @@
 <body>
     <div id="title">A Drop Of Art</div>
     <div id="blur"></div>
+    <div id="footer">CL-Robot 2024</div>
+    <div id="bar">
+        <div id="credits">Credits</div>
+        <div id="download">Download</div>
+        <div id="info">About Us</div>
+    </div>
 </body>
 </html>
