--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Drop Of Art</title>
+    <style src="/style.css"></style>
 </head>
 <body>
     <div id="title">A Drop Of Art</div>
