--- a/main.html
+++ b/main.html
@@ -14,15 +14,15 @@
     <button id="getstartedbt">Get started</button>
     <div id="menu">
         <div id="scroll">
-            <div id="point">
-                <span id="scrolltext">Credits</span>
+            <div id="point1">
+                <span id="scrolltext1">Credits</span>
             </div>
             <div id="line"></div>
-            <div id="point">
-                <span id="scrolltext">Info</span>
+            <div id="point2">
+                <span id="scrolltext2">Info</span>
             </div><div id="line"></div>
-            <div id="point">
-                <span id="scrolltext">Download</span>
+            <div id="point3">
+                <span id="scrolltext3">Download</span>
             </div>
         </div>
     </div>
