--- a/main.html
+++ b/main.html
@@ -25,6 +25,7 @@
                 <span id="scrolltext3">Download</span>
             </div>
         </div>
+        <div id="cred"></div>
     </div>
     <div id="footer">CL-Robot 2024</div>
     <script src="/script.js"></script>
