--- a/main.html
+++ b/main.html
@@ -25,7 +25,19 @@
                 <span id="scrolltext3">Download</span>
             </div>
         </div>
-        <div id="cred"></div>
+        <div id="cred">
+            <div id="profile">
+                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHNubV_hcEuGI4iPBtuVtjSozC2h787U6NqB29A8mOYL2BPPcUqaIg4iTfWBWmdazgq1k&amp;usqp=CAU">
+                <div id="pfptext">Nome, specializzazione, contributo..</div>
+            </div>
+            <div id="profile">
+                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRz1cF1fAsJ6jiyXKO_3-AYCxFyoPRvxSt2lINgg9zMUNIeJBq4k7ho0rudj9sTAk6gB20&amp;usqp=CAU">
+                <div id="pfptext">Nome, specializzazione, contributo..</div>
+            </div>
+            <div id="profile">
+                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_uTWmZAokSbuq2aF9eyR4GkrsKfaQJdOq0x4GAFcad_V5tyZsQyla1vx2SVAaBjOOLY8&amp;usqp=CAU">
+                <div id="pfptext">Nome, specializzazione, contributo..</div>
+            </div>
     </div>
     <div id="footer">CL-Robot 2024</div>
     <script src="/script.js"></script>
