--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
                 <span id="scrolltext3">Download</span>
             </div>
         </div>
-        <div id="cred">
+        <div class="box" id="cred" style="visibility: visible;">
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHNubV_hcEuGI4iPBtuVtjSozC2h787U6NqB29A8mOYL2BPPcUqaIg4iTfWBWmdazgq1k&amp;usqp=CAU">
                 <div id="pfptext">Nome, specializzazione, contributo..</div>
@@ -39,7 +39,9 @@
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_uTWmZAokSbuq2aF9eyR4GkrsKfaQJdOq0x4GAFcad_V5tyZsQyla1vx2SVAaBjOOLY8&amp;usqp=CAU">
                 <div id="pfptext">Nome, specializzazione, contributo..</div>
             </div>
-    </div>
+        </div>
+        <div class="box" id="info" style="visibility: hidden;"></div>
+        <div class="box" id="download" style="visibility: hidden;"></div>
     <script src="/script.js"></script>
 </body>
 </html>
