--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     <div id="footer">CL-Robo City 2024</div>
     <div id="menu">
         <div id="scroll">
-            <div id="point1" style="background-color: white; color: white;">
+            <div id="point1" style="background-color: white; color: coral;">
                 <span id="scrolltext1">Credits</span>
             </div>
             <div id="line"></div>
@@ -40,8 +40,8 @@
                 <div id="pfptext">Nome, specializzazione, contributo..</div>
             </div>
         </div>
-        <div class="box" id="info" style="visibility: hidden;"></div>
-        <div class="box" id="download" style="visibility: hidden;"></div>
+        <div class="box" id="inf" style="visibility: hidden;"></div>
+        <div class="box" id="downl" style="visibility: hidden;"></div>
     <script src="/script.js"></script>
 </body>
 </html>
