--- a/main.html
+++ b/main.html
@@ -13,20 +13,20 @@
     <svg id="arrowsvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"/></svg>
     <button id="getstartedbt">Get started</button>
     <div id="footer">CL-Robo City 2024</div>
-    <div id="menu">
+    <div id="menu" style="opacity: 1; visibility: visible;">
         <div id="scroll">
-            <div id="point1" style="background-color: white; color: coral;">
-                <span id="scrolltext1">Credits</span>
+            <div id="point1" style="background-color: transparent; color: coral;">
+                <span id="scrolltext1" style="color: white;">Credits</span>
             </div>
             <div id="line"></div>
-            <div id="point2">
-                <span id="scrolltext2">Info</span>
+            <div id="point2" style="background-color: transparent;">
+                <span id="scrolltext2" style="color: white;">Info</span>
             </div><div id="line"></div>
-            <div id="point3">
-                <span id="scrolltext3">Download</span>
+            <div id="point3" style="background-color: white;">
+                <span id="scrolltext3" style="color: coral;">Download</span>
             </div>
         </div>
-        <div class="box" id="cred" style="visibility: visible;">
+        <div class="box" id="cred" style="visibility: hidden;">
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHNubV_hcEuGI4iPBtuVtjSozC2h787U6NqB29A8mOYL2BPPcUqaIg4iTfWBWmdazgq1k&amp;usqp=CAU">
                 <div id="pfptext">Nome, specializzazione, contributo..</div>
@@ -41,7 +41,9 @@
             </div>
         </div>
         <div class="box" id="inf" style="visibility: hidden;"></div>
-        <div class="box" id="downl" style="visibility: hidden;"></div>
+            <div class="box" id="downl" style="visibility: visible;"><button id="downlforwindows"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="fill: white;width: 8%;position: relative;margin-right: 5%;"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 93.7l183.6-25.3v177.4H0V93.7zm0 324.6l183.6 25.3V268.4H0v149.9zm203.8 28L448 480V268.4H203.8v177.9zm0-380.6v180.1H448V32L203.8 65.7z"></path></svg> | Download</button><div id="sysrequirements">SYSTEM REQUIREMENTS</div><div id="sysrequirementsmin"><span style="color: #9f8888; font-family: monospace; font-size: 2vh;">MINIMUM:</span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">OS:<span style="color: #9f8888;"> Windows 10</span></span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">Processor:<span style="color: #9f8888;"> INTEL CORE I5 8400 | AMD RYZEN 3 3300X</span></span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">Memory:<span style="color: #9f8888;"> 12 GB RAM</span></span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">Graphics:<span style="color: #9f8888;"> NVIDIA GEFORCE GTX 1060 8GB | AMD RADEON RX 580 4GB</span></span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">Storage:<span style="color: #9f8888;"> 60 GB available space</span></span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">Sound Card:<span style="color: #9f8888;"> Windows Compatible Audio Device</span></span></div><div id="sysrequirementsmax"><span style="color: #9f8888; font-family: monospace; font-size: 2vh;">RECCOMMENDED</span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">OS:<span style="color: #9f8888;"> Windows 10/11</span></span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">Processor:<span style="color: #9f8888;"> INTEL CORE I7-8700k | AMD RYZEN 5 3600X</span></span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">Memory:<span style="color: #9f8888;"> 16 GB RAM</span></span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">Graphics:<span style="color: #9f8888;"> NVIDIA GEFORCE GTX 1070 8GB | AMD RADEON RX VEGA 8GB</span></span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">Storage:<span style="color: #9f8888;"> 60 GB available space</span></span><span style="color: whitesmoke; font-family: monospace; font-size: 2vh;">Sound Card:<span style="color: #9f8888;"> Windows Compatible Audio Device</span></span></div></div>
     <script src="/script.js"></script>
+
+</div>
 </body>
 </html>
