--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
                 <span id="scrolltext3" style="color: white;">Download</span>
             </div>
         </div>
-        <div class="box" id="cred" style="visibility: visible;">
+        <div class="box" id="cred" style="visibility: hidden;">
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHNubV_hcEuGI4iPBtuVtjSozC2h787U6NqB29A8mOYL2BPPcUqaIg4iTfWBWmdazgq1k&amp;usqp=CAU">
                 <div id="pfptext">Nome, specializzazione, contributo..</div>
