--- a/main.html
+++ b/main.html
@@ -15,18 +15,18 @@
     <div id="footer">CL-Robo City 2024</div>
     <div id="menu" style="opacity: 1; visibility: hidden;">
         <div id="scroll">
-            <div id="point1" style="background-color: transparent; color: coral;">
+            <div id="point1" style="background-color: white; color: coral;">
                 <span id="scrolltext1" style="color: coral;">Credits</span>
             </div>
             <div id="line"></div>
             <div id="point2" style="background-color: transparent;">
                 <span id="scrolltext2" style="color: white;">Info</span>
             </div><div id="line"></div>
-            <div id="point3" style="background-color: white;">
+            <div id="point3" style="background-color: transparent;">
                 <span id="scrolltext3" style="color: white;">Download</span>
             </div>
         </div>
-        <div class="box" id="cred" style="visibility: hidden;">
+        <div class="box" id="cred" style="visibility: visible;">
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHNubV_hcEuGI4iPBtuVtjSozC2h787U6NqB29A8mOYL2BPPcUqaIg4iTfWBWmdazgq1k&amp;usqp=CAU">
                 <div id="pfptext">Nome, specializzazione, contributo..</div>
