--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <title>A Drop Of Art</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
-<body>
+<body translate="yes">
     <div id="blur"></div>
     <div id="title">A Drop Of Art</div>
     <div id="subtitle">vita in una goccia d'acqua</div>
@@ -29,15 +29,23 @@
         <div class="box" id="cred" style="visibility: visible;">
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHNubV_hcEuGI4iPBtuVtjSozC2h787U6NqB29A8mOYL2BPPcUqaIg4iTfWBWmdazgq1k&amp;usqp=CAU">
-                <div id="pfptext">Nome, specializzazione, contributo..</div>
+                <div id="pfptext">Prof. Marco Cristiani, artificial intelligence in the VR engineering faculty..</div>
             </div>
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRz1cF1fAsJ6jiyXKO_3-AYCxFyoPRvxSt2lINgg9zMUNIeJBq4k7ho0rudj9sTAk6gB20&amp;usqp=CAU">
-                <div id="pfptext">Nome, specializzazione, contributo..</div>
+                <div id="pfptext">Sr. Matteo Maggiorini, laboratory technician..</div>
             </div>
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_uTWmZAokSbuq2aF9eyR4GkrsKfaQJdOq0x4GAFcad_V5tyZsQyla1vx2SVAaBjOOLY8&amp;usqp=CAU">
-                <div id="pfptext">Nome, specializzazione, contributo..</div>
+                <div id="pfptext">Sr. Alessandro Guardini, sculptor..</div>
+            </div>
+            <div id="profile">
+                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_uTWmZAokSbuq2aF9eyR4GkrsKfaQJdOq0x4GAFcad_V5tyZsQyla1vx2SVAaBjOOLY8&amp;usqp=CAU">
+                <div id="pfptext">Sr. Dario Marconi, sculptur and 3D scan technician..</div>
+            </div>
+            <div id="profile">
+                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_uTWmZAokSbuq2aF9eyR4GkrsKfaQJdOq0x4GAFcad_V5tyZsQyla1vx2SVAaBjOOLY8&amp;usqp=CAU">
+                <div id="pfptext">Doc. Leonardo Latella, director of the zoology section of the Natural History Museum..</div>
             </div>
         </div>
         <div class="box" id="inf" style="visibility: hidden;"></div>
