--- a/main.html
+++ b/main.html
@@ -40,11 +40,11 @@
                 <div id="pfptext">Sr. Alessandro Guardini, sculptor..</div>
             </div>
             <div id="profile">
-                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_uTWmZAokSbuq2aF9eyR4GkrsKfaQJdOq0x4GAFcad_V5tyZsQyla1vx2SVAaBjOOLY8&amp;usqp=CAU">
+                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVFuYSJu9nbiOgANFnco36hFeF2ld2OvMCSR-jCv6lbg&s">
                 <div id="pfptext">Sr. Dario Marconi, sculptur and 3D scan technician..</div>
             </div>
             <div id="profile">
-                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_uTWmZAokSbuq2aF9eyR4GkrsKfaQJdOq0x4GAFcad_V5tyZsQyla1vx2SVAaBjOOLY8&amp;usqp=CAU">
+                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnHotFEBaJDrEwI07f4uN6WPKL3qn24sjpRKCzdoi5xZxqmG07wo0IINwxazhvQZCglCk&usqp=CAU">
                 <div id="pfptext">Doc. Leonardo Latella, director of the zoology section of the Natural History Museum..</div>
             </div>
         </div>
