--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Drop Of Art</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="icon" href="/logo.svg" sizes="any" type="image/svg+xml">
 </head>
 <body translate="yes">
     <div id="blur"></div>
