--- a/main.html
+++ b/main.html
@@ -34,19 +34,31 @@
             </div>
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRz1cF1fAsJ6jiyXKO_3-AYCxFyoPRvxSt2lINgg9zMUNIeJBq4k7ho0rudj9sTAk6gB20&amp;usqp=CAU">
-                <div id="pfptext">Sr. Matteo Maggiorini, laboratory technician..</div>
+                <div id="pfptext">Mr. Matteo Maggiorini, laboratory technician..</div>
             </div>
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_uTWmZAokSbuq2aF9eyR4GkrsKfaQJdOq0x4GAFcad_V5tyZsQyla1vx2SVAaBjOOLY8&amp;usqp=CAU">
-                <div id="pfptext">Sr. Alessandro Guardini, sculptor..</div>
+                <div id="pfptext">Mr. Alessandro Guardini, sculptor..</div>
             </div>
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVFuYSJu9nbiOgANFnco36hFeF2ld2OvMCSR-jCv6lbg&s">
-                <div id="pfptext">Sr. Dario Marconi, sculptur and 3D scan technician..</div>
+                <div id="pfptext">Mr. Dario Marconi, sculptur and 3D scan technician..</div>
             </div>
             <div id="profile">
                 <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnHotFEBaJDrEwI07f4uN6WPKL3qn24sjpRKCzdoi5xZxqmG07wo0IINwxazhvQZCglCk&usqp=CAU">
                 <div id="pfptext">Doc. Leonardo Latella, director of the zoology section of the Natural History Museum..</div>
+            </div>
+            <div id="profile">
+                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRz1cF1fAsJ6jiyXKO_3-AYCxFyoPRvxSt2lINgg9zMUNIeJBq4k7ho0rudj9sTAk6gB20&amp;usqp=CAU">
+                <div id="pfptext">Prof. Silvia Lampis e Giovanna Felis, microbiology teachers of the Department of Biotechnology and representatives of the VUCC-DBT microorganism collection (Verona University Culture Collection - Dept of Biotechnology)..</div>
+            </div>
+            <div id="profile">
+                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_uTWmZAokSbuq2aF9eyR4GkrsKfaQJdOq0x4GAFcad_V5tyZsQyla1vx2SVAaBjOOLY8&amp;usqp=CAU">
+                <div id="pfptext">Mr. Luigi Bozzano, microbiologist specializing in photography of microorganisms and influencers..</div>
+            </div>
+            <div id="profile">
+                <img id="pfp" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVFuYSJu9nbiOgANFnco36hFeF2ld2OvMCSR-jCv6lbg&s">
+                <div id="pfptext">Mrs. Desirée Moffitt, microbiologist specializing in microscope clips and influencers..</div>
             </div>
         </div>
         <div class="box" id="inf" style="visibility: hidden;"><span id="goal">OUR GOAL</span><br><span id="text">Is to make a <strong>niche hobby</strong> like the observation of microbiology thru water droplets interesting using a <strong>virtual experience</strong> full of content that can intrigue other people.</span><span id="snippets">THE EXPERIENCE</span><br><span id="text" style="top: 14%;">A 3D virtual experience where the player can navigate thru many rooms that showcase non-traditional ways to display art regarding microbiology.</span><img></div>
